Добавлен проект IPLogsFilter.Db

--- a/IPLogFilter/appSettings.json
+++ b/IPLogFilter/appSettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=IPLogsDb;Username=postgres;Password=1234"
+  },
   "FileLog": "D:\\PROJECTS\\EffectiveMobile\\IPLogFilter\\IPLogFilter\\bin\\Debug\\net8.0\\IPLogs.txt",
   "FileOutput": "D:\\PROJECTS\\EffectiveMobile\\IPLogFilter\\IPLogFilter\\bin\\Debug\\net8.0\\IPLogsOutput2.txt",
   "AddressStart": "29.68.159.190",
