Добавлен сервис для работы с хранилищем Minio

--- a/IPLogsFilterAPI/appsettings.Development.json
+++ b/IPLogsFilterAPI/appsettings.Development.json
@@ -11,6 +11,17 @@
   "AppSettings": {
     "PathToFolderWithLogs": "D:\\PROJECTS\\EffectiveMobile\\IPLogFilter\\IPLogsFilterAPI\\LogFiles",
     "TimeToCheckForNewRawFiles": 60,
-    "FilesToProcessPerIteration":  5
-  }
+    "FilesToProcessPerIteration": 1
+  },
+  "AppSettingsMinioAPI": {
+    "EndPoint": "http://192.168.100.70:9000",
+    "AccessKey": "Dnwp5D7ihXglMvWJQRnq",
+    "SecretKey": "ygxI3xTk4IGXqRjlMICJ7dw0mYTViY6zsRSK9hxz"
+  },
+  "AppSettingsMinio": {
+    "BucketName": "ip-logs",
+    "PathFolderToSaveFile": "D:\\PROJECTS\\EffectiveMobile\\IPLogFilter\\IPLogsFilterAPI\\LogFilesMinio",
+    "TimeToCheckForNewRawFiles": 60,
+    "FilesToProcessPerIteration": 1
+  },
 }
