--- a/IPLogsFilter.Bussines.ReadLogsHostedService/IPLogsFilter.Bussines.ReadLogsHostedService.csproj
+++ b/IPLogsFilter.Bussines.ReadLogsHostedService/IPLogsFilter.Bussines.ReadLogsHostedService.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Minio" Version="6.0.2" />
   </ItemGroup>
 
   <ItemGroup>
