Исправлена ошибка в сервисе Minio.

--- a/IPLogsFilterAPI/IPLogsFilterAPI.csproj
+++ b/IPLogsFilterAPI/IPLogsFilterAPI.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\IPLogsFilter.Db\IPLogsFilter.Db.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="LogFilesMinio\" />
+  </ItemGroup>
+
 </Project>
