--- a/IPLogsFilterAPI/appsettings.Development.json
+++ b/IPLogsFilterAPI/appsettings.Development.json
@@ -14,7 +14,7 @@
     "FilesToProcessPerIteration": 1
   },
   "AppSettingsMinioAPI": {
-    "EndPoint": "http://192.168.100.70:9000",
+    "EndPoint": "192.168.100.70:9000",
     "AccessKey": "Dnwp5D7ihXglMvWJQRnq",
     "SecretKey": "ygxI3xTk4IGXqRjlMICJ7dw0mYTViY6zsRSK9hxz"
   },
