Добавлен сервис, который в качестве источника новых файлов использует веб-сервис.

--- a/IPLogsFilterAPI/appsettings.Development.json
+++ b/IPLogsFilterAPI/appsettings.Development.json
@@ -24,4 +24,7 @@
     "TimeToCheckForNewRawFiles": 60,
     "FilesToProcessPerIteration": 1
   },
+  "WebLogsProveder": {
+    "BasePath": "https://localhost:7180/Logs"
+  }
 }
