Добавлена MVC часть. Создан метод, позволяющий просматривать данные из таблицы логов.

--- a/IPLogsFilter.DataAccess/IPLogsFilter.DataAccess.csproj
+++ b/IPLogsFilter.DataAccess/IPLogsFilter.DataAccess.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\IPLogsFilter.Abstractions\IPLogsFilter.Abstractions.csproj" />
     <ProjectReference Include="..\IPLogsFilter.Db\IPLogsFilter.Db.csproj" />
   </ItemGroup>
