--- a/IPLogsFilterMVC/appsettings.Development.json
+++ b/IPLogsFilterMVC/appsettings.Development.json
@@ -7,5 +7,24 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=IPLogsDb;Username=postgres;Password=1234"
+  },
+  "AppSettings": {
+    "PathToFolderWithLogs": "D:\\PROJECTS\\EffectiveMobile\\IPLogFilter\\IPLogsFilterAPI\\LogFiles",
+    "TimeToCheckForNewRawFiles": 60,
+    "FilesToProcessPerIteration": 1
+  },
+  "AppSettingsMinioAPI": {
+    "EndPoint": "192.168.100.70:9000",
+    "AccessKey": "Dnwp5D7ihXglMvWJQRnq",
+    "SecretKey": "ygxI3xTk4IGXqRjlMICJ7dw0mYTViY6zsRSK9hxz"
+  },
+  "AppSettingsMinio": {
+    "BucketName": "ip-logs",
+    "PathFolderToSaveFile": "D:\\PROJECTS\\EffectiveMobile\\IPLogFilter\\IPLogsFilterAPI\\LogFilesMinio",
+    "TimeToCheckForNewRawFiles": 60,
+    "FilesToProcessPerIteration": 1
+  },
+  "WebLogsProveder": {
+    "BasePath": "https://localhost:7180/Logs"
   }
 }
